--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>This is my website</h1>
+    <input type="button" value="">
+    <br>
+    <button>click me!!!</button>
 </body>
 </html>
