--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>This is my website</h1>
+    <input type="button" value="">
+    <button>Come with me now!!!</button>
 </body>
 </html>
